--- a/.github/workflows/0-welcome.yml
+++ b/.github/workflows/0-welcome.yml
@@ -55,6 +55,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Let's get all the branches.
+          fetch-depth: 0 # Let's get all the branches.
 
       # Create update-game branch, update game, and create pull request for the learner.
       - name: Prepare a branch and pull request
